[package]
name = "rest-api"
version = "0.1.0"
authors = ["Juha Untinen <juha.untinen@blueprintgenetics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]